<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hottie</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="preference_file_key">olectronix.hottie.preferences</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_config">Configure Device</string>
    <string name="title_activity_register_phone">Register Phone Number</string>
    <string name="request_PIN">Please insert the unique PIN number of your Hottie device</string>
    <string name="request_number">Currently registered numbers are:</string>
    <string name="pin">PIN code</string>
    <string name="button_on">ON</string>
    <string name="button_off">OFF</string>
    <string name="button_report">Report</string>
    <string name="button_config">Configure Device</string>
    <string name="button_config_output">Configure</string>
    <string name="button_advanced">Advanced Commands</string>
    <string name="button_save_phone_numbers">Save Numbers</string>
    <string name="button_next">Next</string>
    <string name="button_on_off">State</string>
    <string name="button_set">Go</string>
    <string name="button_save_settings">Save Settings</string>
    <string name="seconds">Seconds</string>
    <string name="title_activity_heater_ignition">Heater Ignition Dependency</string>
    <string name="title_activity_heater_type">Heater Type</string>
    <string name="title_activity_configure_outputs">Configure Outputs</string>
    <string name="unknown_phone">Unknown</string>
    <string name="flood_control_message">Flooding Not Allowed!</string>
    <string name="title_activity_swipe_views">Hottie</string>
    <string name="title_activity_config_output_specific">Config Output Specific</string>
    <string name="output_name">Output Name</string>
    <string name="output_indep">Independent</string>
    <string name="output_max_time">ON Max Time</string>
    <string name="output_on_temp">ON Temp</string>
    <string name="output_off_temp">OFF Temp</string>
    <string name="output_off_voltage">OFF Voltage</string>
    <string name="output_off_current">OFF Current</string>
    <string name="output_max_intensity">Max Intensity</string>
    <string name="output_min_intensity">Min Intensity</string>
    <string name="output_mode">Mode</string>
    <string name="output_sensor">Temp Sensor</string>
    <string name="output_mode_never">Never ON</string>
    <string name="output_mode_sms_request">SMS request</string>
    <string name="output_mode_auto">Automatic</string>
    <string name="service_name">Hottie SMS Service</string>
    <string name="title_activity_report_graph">ReportGraphActivity</string>
    <string name="graph_serie">Serie to plot</string>
    <string name="graph_duration_start">Start time</string>
    <string name="graph_duration_stop">End time</string>

    <string name="hottie_phone_preference_hint">Hottie\'s phone number</string>
    <string name="alert_set_phone_number">Please set the device\'s phone number in settings menu</string>
    <string name="alert_set_pin_code">Please set the device\'s pin code in settings menu</string>

    <string name="basic_tab_ext_temp">Exterior temp &#x2103; </string>
    <string name="basic_tab_int_temp">Interior temp &#x2103; </string>
    <string name="basic_tab_wtt_temp">Heater temp &#x2103; </string>

</resources>
